[gd_scene load_steps=29 format=2]

[ext_resource path="res://img/ui/menu/fondo.png" type="Texture" id=1]
[ext_resource path="res://img/ui/menu/pec.png" type="Texture" id=2]
[ext_resource path="res://img/ui/menu/_btn_personaje_on.png" type="Texture" id=3]
[ext_resource path="res://fuentes/Barlow-ExtraBold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://img/ui/menu/_btn_personaje.png" type="Texture" id=5]
[ext_resource path="res://img/star_on.png" type="Texture" id=6]
[ext_resource path="res://script/Menu.gd" type="Script" id=8]
[ext_resource path="res://img/star.png" type="Texture" id=9]
[ext_resource path="res://sound/Ambient-1.ogg" type="AudioStream" id=10]
[ext_resource path="res://fuentes/Pocket Money.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://img/ui/menu/cuadroo_menu.png" type="Texture" id=12]
[ext_resource path="res://img/ui/menu/barra2.png" type="Texture" id=13]
[ext_resource path="res://img/NUEVO/b2.png" type="Texture" id=14]
[ext_resource path="res://img/NUEVO/b2_on.png" type="Texture" id=15]
[ext_resource path="res://img/ui/menu/btn_salir.png" type="Texture" id=16]
[ext_resource path="res://img/ui/menu/BARRA.png" type="Texture" id=17]
[ext_resource path="res://img/ui/menu/btn_saliron.png" type="Texture" id=18]
[ext_resource path="res://img/star_of.png" type="Texture" id=19]
[ext_resource path="res://img/NUEVO/Splash.jpg" type="Texture" id=20]

[sub_resource type="Curve" id=1]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -216 ), 0.0, 0.0, 0, 0, Vector2( 0.978261, 235.636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, 0 )

[sub_resource type="ParticlesMaterial" id=4]
next_pass = SubResource( 3 )
emission_shape = 2
emission_box_extents = Vector3( 900, 500, 1 )
flag_disable_z = true
direction = Vector3( 4, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity_curve = SubResource( 2 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 8.0

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=6]
resource_name = "Nueva Animación"

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/ladero:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 101, 1080 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/fondo:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Control/fondo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "anim"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Control/ladero:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 101, 1080 ), Vector2( 150, 1080 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Control/fondo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ) ]
}

[node name="Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 20 )

[node name="Control" type="Node2D" parent="CanvasLayer"]

[node name="fondo" type="Sprite" parent="CanvasLayer/Control"]
visible = false
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
position = Vector2( 959.5, 532 )
texture = ExtResource( 1 )

[node name="estrella" type="Particles2D" parent="CanvasLayer/Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.266667 )
position = Vector2( 886, 533 )
rotation = -0.010472
amount = 26
lifetime = 7.0
preprocess = 5.0
randomness = 1.0
draw_order = 1
process_material = SubResource( 4 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 396, 791 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
modulate = Color( 0.631373, 1, 0.639216, 1 )
margin_left = 1099.0
margin_top = -3.0
margin_right = 1922.0
margin_bottom = 1077.0
texture = ExtResource( 12 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
modulate = Color( 0.631373, 1, 0.639216, 1 )
margin_left = 2.0
margin_top = -11.0
margin_right = 825.0
margin_bottom = 1069.0
texture = ExtResource( 12 )
flip_h = true

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
visible = false
margin_left = 375.0
margin_top = 94.0
margin_right = 1592.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 9 )
text = "LAS PRUEBAS DE XIBALBA"

[node name="ladero" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
margin_right = 101.0
margin_bottom = 1080.0
texture = ExtResource( 13 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/Control"]
visible = false
margin_left = 663.0
margin_top = 943.0
margin_right = 1317.0
margin_bottom = 1053.0
texture = ExtResource( 17 )
expand = true

[node name="star" type="TextureButton" parent="CanvasLayer/Control"]
pause_mode = 2
margin_left = 668.0
margin_top = 313.0
margin_right = 1364.0
margin_bottom = 623.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="credi" type="TextureButton" parent="CanvasLayer/Control"]
pause_mode = 2
margin_left = 832.0
margin_top = 721.0
margin_right = 1216.0
margin_bottom = 813.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
expand = true

[node name="perfil" type="TextureButton" parent="CanvasLayer/Control"]
visible = false
margin_left = 1406.0
margin_top = 330.0
margin_right = 1862.0
margin_bottom = 503.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="quit" type="TextureButton" parent="CanvasLayer/Control"]
visible = false
margin_left = 1507.0
margin_top = 734.0
margin_right = 1910.0
margin_bottom = 893.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 1702.0
margin_top = 986.0
margin_right = 1867.0
margin_bottom = 1037.0
custom_fonts/font = SubResource( 5 )
text = "Version: 0.1"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Nueva Animación" = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/anim = SubResource( 8 )

[connection signal="pressed" from="CanvasLayer/Control/star" to="." method="_on_star_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/credi" to="." method="_on_credi_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/perfil" to="." method="_on_perfil_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/quit" to="." method="_on_quit_pressed"]
